--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -12,7 +12,7 @@
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        android:icon="@drawable/ic_account"
+        android:icon="@drawable/ic_power"
         app:showAsAction="always" />
 
 </menu>
