--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,16 +9,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="fr.mbds.bankapp.Main2Activity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_logout"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        android:icon="@drawable/ic_account"
+        android:title="Log out"
+        android:icon="@drawable/ic_power"
         app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/action_add"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        android:icon="@drawable/ic_add"
-        app:showAsAction="always" />
 </menu>
