--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,6 +47,37 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="10dp"
+                android:paddingBottom="30dp">
+
+                <TextView
+                    android:id="@+id/profile_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Username (Nom et prenom)"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:gravity="center" />
+
+                <!--TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Solde Actuel"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:id="@+id/profile_solde"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="2 249,00 £"
+                    android:gravity="center"/-->
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -87,6 +118,7 @@
                     android:gravity="center">
 
                     <TextView
+                        android:id="@+id/profile_solde"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2 249,00 £"
@@ -97,33 +129,6 @@
                         android:text="Solde Actuel"/>
 
                 </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/profile_username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Username (Nom et prenom)"
-                    android:gravity="center"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Solde Actuel"
-                    android:gravity="center"/>
-
-                <TextView
-                    android:id="@+id/profile_solde"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="2 249,00 £"
-                    android:gravity="center"/>
 
             </LinearLayout>
 
