--- a/app/src/main/res/layout/activity_load_credit.xml
+++ b/app/src/main/res/layout/activity_load_credit.xml
@@ -33,6 +33,7 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <LinearLayout
+            android:id="@+id/help_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -52,6 +53,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/nfc_help"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/help_img_validate"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="#FAFAFA"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/see_creadit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Ajout de 10000"
+                android:textStyle="bold"
+                android:padding="5dp"/>
+
+            <Button
+                android:id="@+id/valide_add"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Valider"/>
 
         </LinearLayout>
 
